Add features and minimal release